@@ -1,5 +1,11 @@
 2009-06-18  Gary Benson  <gbenson@redhat.com>
 
+	* ports/hotspot/src/share/vm/shark/sharkTopLevelBlock.cpp
+	(SharkTopLevelBlock::improve_virtual_call): Only print cast
+	warnings when run with -XX:+SharkPerformanceWarnings.
+
+2009-06-18  Gary Benson  <gbenson@redhat.com>
+
 	* ports/hotspot/src/share/vm/shark/sharkInvariants.hpp: New file.
 	* ports/hotspot/src/share/vm/shark/sharkInvariants.cpp: Likewise.
 	
